<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChooseActivity">

    <TextView
            android:text="@string/choose_textview_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/choose_textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="24dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

    <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/choose_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="24dp">

        <RadioButton
                android:id="@+id/radio_crow"
                android:text="@string/radio_crow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="textStart"/>

        <RadioButton
                android:id="@+id/radio_dog"
                android:text="@string/radio_dog"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        <RadioButton
                android:id="@+id/radio_cat"
                android:text="@string/radio_cat"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>